Add delete block methods

--- a/examples/index.html
+++ b/examples/index.html
@@ -350,6 +350,15 @@
                                                         'bottom-border': hoveredTarget[block.id] === 'bottom'
                                                         }">
 
+                                                    <!-- Remove Button -->
+                                                    <button class="block-remove-btn" 
+                                                            @click.stop="showDeleteConfirmation(block.id)"
+                                                            title="Remove block">
+                                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                                            <path d="M18 6L6 18M6 6l12 12"/>
+                                                        </svg>
+                                                    </button>
+
                                                     <!-- Block content -->
                                                     <div x-html="block.editorRender()" class="block-content"></div>
                                                 </div>
