--- a/examples/index.html
+++ b/examples/index.html
@@ -119,7 +119,7 @@
                     </div>
                     <h1 class="mt-10 text-4xl font-bold tracking-tight text-white sm:text-6xl">Build Rich Content
                         with Alpine.js</h1>
-                    <p class="mt-6 text-lg leading-8 text-gray-300">A powerful block-based content editor built with Alpine.js. Create dynamic, interactive content with drag-and-drop simplicity. Just 23KB gzipped with only Alpine.js and UUID as dependencies.</p>
+                    <p class="mt-6 text-lg leading-8 text-gray-300">A powerful block-based content editor built with Alpine.js. Create dynamic, interactive content with drag-and-drop simplicity.</p>
                     <div class="mt-10 flex items-center gap-x-6">
                         <a href="#demo"
                            class="rounded-md bg-indigo-500 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-400">Try
