update layouts and raw code with preview and edit fixes

--- a/examples/index.html
+++ b/examples/index.html
@@ -347,6 +347,7 @@
                                                       config: {
                                                         content: '',
                                                         mode: 'html',
+                                                        showPreview: true,
                                                         validateHtml: true
                                                       }
                                                     },
