added ability to add blocks into the raw editor and edit properties

--- a/examples/index.html
+++ b/examples/index.html
@@ -628,6 +628,7 @@
 </div>
 
 <script src="../dist/index.esm.js" type="module"></script>
+<script src="../src/utils/TemplateInteractivity.js" type="module"></script>
 <script>
     hljs.highlightAll();
 </script>
